API: voted_comments and comments by user with query
